--- a/Enhancer/Packages/manifest.json
+++ b/Enhancer/Packages/manifest.json
@@ -1,17 +1,18 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.17.2",
-    "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.15",
-    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ai.navigation": "2.0.0",
+    "com.unity.collab-proxy": "2.3.1",
+    "com.unity.feature.development": "1.0.2",
+    "com.unity.ide.rider": "3.0.28",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.4.4",
-    "com.unity.postprocessing": "3.2.2",
-    "com.unity.test-framework": "1.1.31",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.7.8",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.postprocessing": "3.4.0",
+    "com.unity.test-framework": "1.3.9",
+    "com.unity.timeline": "1.8.6",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualscripting": "1.8.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
